--- a/src/index.css
+++ b/src/index.css
@@ -39,3 +39,15 @@ button {
   backdrop-filter: blur(16px);
   z-index: -1;
 }
+@media (max-width: 768px) {
+  .container {
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+}
+@media (max-width: 500px) {
+  .container {
+    padding-left: 25px;
+    padding-right: 25px;
+  }
+}
