--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -38,5 +38,78 @@ nav .container .icons {
   /* gap: 24px; */
   gap: 1.7vw;
 }
-nav .container .icons .icon {
+/* small screnns nav */
+nav .container .sidebar-holder {
+  display: none;
+}
+nav .container .menu-icon {
+  font-size: 20px;
+  cursor: pointer;
+}
+nav .container .menu {
+  width: 256px;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  right: -256px;
+  transition: 0.5s;
+  background-color: white;
+  box-shadow: 0px 4px 5px 0px #00000040;
+  z-index: 1000;
+}
+nav .container .menu .close-icon {
+  padding: 30px 0px 0px 20px;
+  font-size: 24px;
+  color: var(--primary-color);
+  cursor: pointer;
+}
+nav .container .menu ul {
+  padding: 20px 0px 40px;
+}
+nav .container .menu li a {
+  display: block;
+  padding: 25px;
+  transition: 0.5s;
+  color: var(--text-color);
+}
+nav .container .menu li a:not(.active):hover {
+  padding-left: 30px;
+  color: var(--secondary-color);
+}
+nav .container .menu li a.active {
+  color: var(--primary-color);
+  background-color: var(--secondary-color);
+}
+nav .container .menu .language {
+  padding: 20px;
+}
+nav .container .menu .language .holder {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+nav .container .menu .language .globe-icon {
+  color: var(--primary-color);
+}
+nav .container .menu .language .arrow-icon {
+  transition: 0.5s;
+}
+nav .container .menu .language .arrow-icon:hover {
+  color: var(--secondary-color);
+}
+@media (max-width: 991px) {
+  nav .container .logo {
+    font-size: 24px;
+  }
+  nav .container .sidebar-holder {
+    display: block;
+  }
+  .header-holder header .container {
+    justify-content: center;
+  }
+  .header-holder header .container .holder,
+  .header-holder nav .container ul.links,
+  .header-holder nav .container .icons {
+    display: none;
+  }
 }
