--- a/src/sections/HomeHero/HomeHero.css
+++ b/src/sections/HomeHero/HomeHero.css
@@ -12,18 +12,19 @@
 }
 .home-hero .container {
   text-align: center;
-  width: 62%;
+  width: 80%;
 }
 .home-hero .container h1 {
-  /* font-size: 64px; */
-  font-size: 4.4vw;
+  font-size: 64px;
+  /* font-size: 4.4vw; */
   font-weight: 600;
   color: var(--primary-color);
 }
 .home-hero .container p.desc {
-  margin: 30px 0px 60px;
+  /* margin: 30px 0px 60px; */
+  margin: 2.1vw 0px 4.2vw;
   font-weight: 400;
-  font-size: 20px;
+  font-size: 24px;
   letter-spacing: 0.2px;
   line-height: 30px;
   text-align: center;
@@ -58,4 +59,37 @@
 .home-hero .container .btns .customize-btn {
   border: 1px solid white;
   background-color: transparent;
+}
+@media (max-width: 991px) {
+  /* .home-hero .container h1 {
+    font-size: 58px;
+  } */
+  .home-hero .container {
+    width: 100%;
+  }
+}
+@media (max-width: 768px) {
+  .home-hero .container h1 {
+    font-size: 48px;
+  }
+  .home-hero .container p.desc {
+    font-size: 20px;
+  }
+  .home-hero .container .btns .btn {
+    width: 50%;
+  }
+}
+
+@media (max-width: 520px) {
+  .home-hero .container h1 {
+    font-size: 24px;
+  }
+  .home-hero .container p.desc {
+    font-size: 16px;
+  }
+  .home-hero .container .btns .btn {
+    width: 50%;
+    height: 45px;
+    font-size: 14px;
+  }
 }
