--- a/src/sections/HeroSections/HomeHero/HomeHero.css
+++ b/src/sections/HeroSections/HomeHero/HomeHero.css
@@ -7,6 +7,7 @@
   height: 100vh;
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: center;
   background-image: url("/assets/Images/home-hero-bg.png");
   position: relative;
 }
@@ -90,7 +91,8 @@
 
 @media (max-width: 520px) {
   .home-hero .container h1 {
-    font-size: 24px;
+    /* font-size: 24px; */
+    font-size: 36px;
   }
   .home-hero .container p.desc {
     font-size: 16px;
