--- a/src/sections/HomeSections/MainCategories/MainCategories.css
+++ b/src/sections/HomeSections/MainCategories/MainCategories.css
@@ -46,6 +46,7 @@
   transform: translateX(-50%);
   font-size: 28px;
   color: white;
+  text-align: center;
 }
 @media (max-width: 500px) {
   .main-categories {
@@ -53,6 +54,8 @@
   }
   .main-categories .holder {
     margin-top: 32px;
+    display: flex;
+    flex-direction: column;
     gap: 20px;
   }
 }
