--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -38,6 +38,9 @@ nav .container .icons {
   /* gap: 24px; */
   gap: 1.7vw;
 }
+nav .container .icons .icon {
+  cursor: pointer;
+}
 /* small screnns nav */
 nav .container .sidebar-holder {
   display: none;
@@ -46,23 +49,57 @@ nav .container .menu-icon {
   font-size: 20px;
   cursor: pointer;
 }
+nav .container .overlay {
+  position: fixed;
+  top: 0;
+  right: -100%;
+  width: 100%;
+  height: 100%;
+  background-color: #00000080;
+}
 nav .container .menu {
   width: 256px;
   height: 100vh;
   position: fixed;
   top: 0;
-  right: -256px;
+  right: -100%;
   transition: 0.5s;
   background-color: white;
   box-shadow: 0px 4px 5px 0px #00000040;
   z-index: 1000;
 }
-nav .container .menu .close-icon {
+nav .container .menu .user-info {
+  padding: 20px 20px 0px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+nav .container .menu .user-info .cart-icon {
+  margin-top: 5px;
+  font-size: 20px;
+  color: var(--primary-color);
+  cursor: pointer;
+}
+nav .container .menu .user-info .image {
+  width: 64px;
+  height: 64px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #c0c0c0;
+  cursor: pointer;
+}
+nav .container .menu .user-info .image .user-icon {
+  color: white;
+  font-size: 36px;
+}
+/* nav .container .menu .close-icon {
   padding: 30px 0px 0px 20px;
   font-size: 24px;
   color: var(--primary-color);
   cursor: pointer;
-}
+} */
 nav .container .menu ul {
   padding: 20px 0px 40px;
 }
@@ -96,6 +133,26 @@ nav .container .menu .language .arrow-icon {
 }
 nav .container .menu .language .arrow-icon:hover {
   color: var(--secondary-color);
+}
+nav .container .menu .log-out {
+  width: 216px;
+  padding: 15px;
+  position: absolute;
+  bottom: 40px;
+  left: 50%;
+  transform: translateX(-50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  cursor: pointer;
+  font-size: 18px;
+  border-radius: 8px;
+  color: var(--primary-color);
+  background-color: #e2e2e2;
+}
+nav .container .menu .log-out svg {
+  font-size: 24px;
 }
 @media (max-width: 991px) {
   nav .container .logo {
