--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -49,13 +49,9 @@ nav .container .menu-icon {
   font-size: 20px;
   cursor: pointer;
 }
-nav .container .overlay {
-  position: fixed;
+nav .container .overlay.menu-overlay {
   top: 0;
   right: -100%;
-  width: 100%;
-  height: 100%;
-  background-color: #00000080;
 }
 nav .container .menu {
   width: 256px;
@@ -101,7 +97,7 @@ nav .container .menu .user-info .image .user-icon {
   cursor: pointer;
 } */
 nav .container .menu ul {
-  padding: 20px 0px 40px;
+  padding: 20px 0px 0px;
 }
 nav .container .menu li a {
   display: block;
@@ -135,24 +131,81 @@ nav .container .menu .language .arrow-icon:hover {
   color: var(--secondary-color);
 }
 nav .container .menu .log-out {
-  width: 216px;
+  width: 100%;
   padding: 15px;
   position: absolute;
-  bottom: 40px;
-  left: 50%;
-  transform: translateX(-50%);
+  bottom: 0px;
+  right: 0;
   display: flex;
   justify-content: center;
   align-items: center;
   gap: 10px;
   cursor: pointer;
   font-size: 18px;
-  border-radius: 8px;
   color: var(--primary-color);
-  background-color: #e2e2e2;
+  background-color: transparent;
+  border-top: 1px solid #61706e;
 }
 nav .container .menu .log-out svg {
   font-size: 24px;
+}
+/* Pop Ups */
+.user-popup-holder {
+  position: relative;
+}
+.user-popup-holder .overlay.user-overlay {
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  top: -100%;
+  left: 0;
+  transition: 0.5s;
+}
+.user-popup-holder .user-popup {
+  position: fixed;
+  right: 16%;
+  width: 220px;
+  height: 275px;
+  border-width: 1px;
+  padding: 32px;
+  background-color: white;
+  transition: 0.6s;
+  /* display: flex;
+  flex-direction: column;
+  justify-content: space-between; */
+}
+.user-popup-holder .user-popup .user-name {
+  padding-bottom: 8px;
+  border-bottom: 1px solid var(--nutral-color);
+}
+.user-popup-holder .user-popup ul {
+  padding-bottom: 8px;
+  border-bottom: 1px solid var(--nutral-color);
+}
+.user-popup-holder .user-popup ul li {
+}
+.user-popup-holder .user-popup ul li a {
+  display: block;
+  padding: 10px;
+  font-weight: 400;
+  font-size: 18px;
+  color: #23262f;
+  transition: 0.5s;
+}
+.user-popup-holder .user-popup .log-out:hover,
+.user-popup-holder .user-popup ul li a:hover {
+  background-color: #e2e2e2;
+}
+.user-popup-holder .user-popup .log-out {
+  padding: 10px;
+  font-weight: 400;
+  font-size: 18px;
+  color: var(--error-color);
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  transition: 0.5s;
 }
 @media (max-width: 991px) {
   nav .container .logo {
