--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,9 @@ body {
   --primary-color: #1d322f;
   --secondary-color: #1d322fb2;
   --third-color: #385854;
+  --nutral-color: #c0c0c0;
   --text-color: #000e0c;
+  --error-color: #b3261e;
 }
 .container {
   margin: 0px auto;
@@ -25,6 +27,12 @@ a {
 }
 button {
   border: none;
+}
+.overlay {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background-color: #00000080;
 }
 /* home page*/
 /* custom */
@@ -61,7 +69,7 @@ section {
   font-weight: 400;
   color: #23262f;
 }
-Link{
+Link {
   text-decoration: none;
 }
 @media (max-width: 991px) {
