--- a/src/components/ContactForm/ContactForm.css
+++ b/src/components/ContactForm/ContactForm.css
@@ -56,14 +56,15 @@ border-bottom:  1px solid #C0C0C0;
   display: flex;
   align-items: center;
   gap: 10px;
-  p{
-    font-weight: 200;
-    font-size:16px ;
-  }
+ 
   .contact-icon{
     height: 24px;
     width: 24px;
   }
+}
+.all-details-info .more-details p{
+  font-weight: 300;
+  font-size:16px ;
 }
 .phone-and-email{
   display: flex;
@@ -101,6 +102,7 @@ input::placeholder{
     width: 100%;
     height: 27vh;
     resize: none; 
+    border: 1px solid #000E0C
   }
  
 }
@@ -114,11 +116,12 @@ input::placeholder{
     font-weight: 500;
      font-size:18px ;
      color: #ffffff;
+  
   }
 }
 @media (max-width: 992px) {
-  .contact-section .shop-info-and-form ,.head-contact-us-page ,.address-and-business-hours , .phone-and-email{
-    flex-direction: column;
+  .contact-section .shop-info-and-form ,.head-contact-us-page {
+   flex-direction: column-reverse;
     gap: 16px;
   }
   .head-contact-us-page .we-love-hear-you-sec ,.head-contact-us-page  .leave-massege-sec , .contact-form {
@@ -141,5 +144,18 @@ input::placeholder{
       width: 35px;
     }
   }
- 
+  .contact-shop-info{
+    width: 100%;
+  }
+  
+ .contact-section{
+  padding-bottom: 0;
+ }
+}
+@media (max-width: 500px) {
+
+  .phone-and-email , .address-and-business-hours{
+ flex-direction: column;
+ gap: 10px;
+  }
 }
