--- a/src/components/TopGreenBar/TopGreenBar.css
+++ b/src/components/TopGreenBar/TopGreenBar.css
@@ -18,7 +18,7 @@
     height: 12px;
     color: #EAECEC;
 }
-.top-green-bar .go-home-from-anywhere{
+.top-green-bar .go-to-this-page{
 font-weight: 200;
 font-size: 14px;
 color: #EAECEC;
