--- a/src/components/Shop/3DModel/FurnitureFilter.css
+++ b/src/components/Shop/3DModel/FurnitureFilter.css
@@ -1,5 +1,5 @@
 /* FurnitureFilter.css */
-.accordion-collapse.animate-open {
+/* .accordion-collapse.animate-open {
   animation: openAccordion 0.4s ease-out forwards;
 }
 
@@ -27,4 +27,4 @@
     opacity: 0;
     transform: scaleY(0.9);
   }
-}
+} */
