--- a/src/components/3DModel/index.css
+++ b/src/components/3DModel/index.css
@@ -1,14 +1,15 @@
 .models {
-  margin-top: 100px;
+  margin-top: 12px;
 }
 .models h3 {
-  padding: 70px 0;
-  font-size: 20px;
+  padding: 50px 0;
+  font-size: 25px;
 }
 .models .topBar {
   display: grid;
-  grid-template-columns: repeat(2, 300px) minmax(300px, 600px);
+  grid-template-columns: auto auto 1fr;
   justify-content: flex-start;
+  gap: 50px;
 }
 .models .topBar .search {
   position: relative;
@@ -29,6 +30,7 @@
 }
 .models .topBar .results {
   padding: 10px;
+  font-size: 17px;
 }
 .models .topBar .sorting {
   margin-left: 200px;
@@ -37,6 +39,7 @@
   display: flex;
   align-items: center;
   padding: 10px;
+  width: 200px;
   /* justify-content: center; */
 }
 .models .topBar .search::before {
@@ -51,13 +54,14 @@
   justify-content: space-between;
 }
 .models .products .filters {
-  width: 20%;
+  width: 40vw;
 }
 .models .products .cards {
   display: grid;
+  height: fit-content;
   justify-content: space-between;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 20px;
-  width: 70%;
-  margin: 100px;
+  grid-template-columns: repeat(3, auto);
+  gap: 50px;
+  margin: 30px 65px;
+  border-bottom: 1px solid #c0c0c0;
 }
