--- a/src/pages/UpdatePassword/UpdatePassword.css
+++ b/src/pages/UpdatePassword/UpdatePassword.css
@@ -5,7 +5,7 @@
   justify-content: center;
   align-items: center;
   background-image: linear-gradient(to left, #00000033, #00000033),
-    url("/assets/Images/Img.png");
+    url("/assets/Images/istockphoto-943910360-2048x2048.jpg");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
