--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -10,10 +10,17 @@ nav .container {
 nav .container .logo {
   font-weight: 700;
   /* font-size: 36px; */
-  font-size: 2.5vw;
+  font-size: 2vw;
   letter-spacing: 0%;
-
-  color: var(--text-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+  color: var(--primary-color);
+}
+nav .container .logo img {
+  width: 30px;
+  height: 30px;
 }
 nav .container ul.links {
   display: flex;
