--- a/src/components/Filter/Filter.css
+++ b/src/components/Filter/Filter.css
@@ -1,12 +1,11 @@
 .filter {
   width: 200px;
-  margin: 100px auto;
 }
 .filter .title {
   font-size: 20px;
   font-weight: 600;
   letter-spacing: 1px;
-  padding: 40px 0;
+  padding: 30px 0;
 }
 
 .item {
@@ -126,6 +125,7 @@
   h3 {
   }
   .checkbox {
+    cursor: pointer;
     font-size: 18px;
     div {
       padding: 10px 0;
@@ -144,4 +144,10 @@
       }
     }
   }
+}
+
+.reset {
+  font-size: 18px;
+  text-decoration: underline;
+  padding: 20px 0 0 0;
 }
