--- a/src/components/3DModel/index.css
+++ b/src/components/3DModel/index.css
@@ -6,9 +6,7 @@
   font-size: 25px;
 }
 .models .topBar {
-  display: grid;
-  grid-template-columns: auto auto 1fr;
-  justify-content: flex-start;
+  display: flex;
   gap: 50px;
 }
 .models .topBar .search {
@@ -28,19 +26,28 @@
   right: 0;
   position: absolute;
 }
+.models .topBar .sorting-holder {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex: 1;
+}
 .models .topBar .results {
   padding: 10px;
   font-size: 17px;
 }
 .models .topBar .sorting {
-  margin-left: 200px;
   background-color: #eee;
   border: #23262f;
   display: flex;
   align-items: center;
   padding: 10px;
   width: 200px;
-  /* justify-content: center; */
+  justify-content: space-between;
+}
+.models .topBar .sorting svg {
+  margin-top: 7px;
+  color: #23262f;
 }
 .models .topBar .search::before {
   contain: "./search.svg";
@@ -52,16 +59,20 @@
 .models .products {
   display: flex;
   justify-content: space-between;
+  gap: 65px;
 }
 .models .products .filters {
-  width: 40vw;
+  /* width: 40vw; */
 }
 .models .products .cards {
   display: grid;
   height: fit-content;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   grid-template-columns: repeat(3, auto);
+  flex: 1;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 50px;
-  margin: 30px 65px;
+  margin: 35px 0px;
   border-bottom: 1px solid #c0c0c0;
+  padding-bottom: 50px;
 }
