--- a/src/sections/HomeSections/CustomOrder/CustomOrder.css
+++ b/src/sections/HomeSections/CustomOrder/CustomOrder.css
@@ -67,7 +67,7 @@
   margin-top: 8px;
   color: #23262f;
 }
-.custom-order .container .text button {
+.custom-order .container .text .make-your-own-design-btn {
   margin-top: 20px;
   display: flex;
   align-items: center;
