--- a/src/sections/AboutSections/MoreThan/MoreThan.css
+++ b/src/sections/AboutSections/MoreThan/MoreThan.css
@@ -41,3 +41,9 @@
         font-size: 16px;    
     }
 }
+@media (max-width: 500px) {
+    .more-than .container .holder{
+        flex-direction: column;
+        align-items: flex-start;
+    }
+}
