--- a/src/components/ContactForm/ContactForm.css
+++ b/src/components/ContactForm/ContactForm.css
@@ -119,6 +119,9 @@ input::placeholder{
   
   }
 }
+.submit-btn:hover{
+  background-color: var(--third-color);
+}
 @media (max-width: 992px) {
   .contact-section .shop-info-and-form ,.head-contact-us-page {
    flex-direction: column-reverse;
