--- a/src/components/CustomizeOrder/CustomizeOrder.css
+++ b/src/components/CustomizeOrder/CustomizeOrder.css
@@ -25,8 +25,14 @@
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     z-index: 100000;
     padding: 32px;
+    display: flex;
+    /* align-items: center; */
+    flex-direction: column;
+    justify-content: center;
+  
     
 }
+
 
 .popupOverlay .pop-up-costomize-order-page .close-btn .circle-close-icon{
     width: 32px;
@@ -226,6 +232,12 @@ width: 50%;
     }
     .color-counter-box{
         flex-direction: column;
-        grid-area: 10px;
+        gap: 15px;
+    }
+  }
+  @media (max-width:550px){
+    .color-counter-box{
+        flex-direction: column;
+         gap: 15px;
     }
   }
